[#34073] fix contrast of  visually hidden content in header

--- a/themes/agov/agov_whitlam/sass/_variables.scss
+++ b/themes/agov/agov_whitlam/sass/_variables.scss
@@ -238,6 +238,7 @@ $chroma: add-colors('functional', (
   search-bg:              'white-smoke',
 
   header-background:      'blue-steel',
+  header-color:           'white',
   pager-bg:               'grey-extra-light',
   button-color:           'blue',
   button-color-hover:     'white',
