--- a/themes/agov/agov_whitlam/sass/components/header/_header.scss
+++ b/themes/agov/agov_whitlam/sass/components/header/_header.scss
@@ -9,6 +9,7 @@
 .header,
 %header {
   background: color(header-background);
+  color: color(header-color);
   position: relative;
   margin-bottom: 80px;
 
